[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/Characters/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Levels/Overworld/Overworld_1_2.gd" type="Script" id=2]
[ext_resource path="res://Objects/Interactables/Portal.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/AutumnForest.tres" type="TileSet" id=4]
[ext_resource path="res://Resources/Dialog.tres" type="TileSet" id=5]

[node name="Overworld" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 109.611, 490.426 )

[node name="Map" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1114111, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 1, 0, 1048607, 1, 0 )

[node name="Dialog" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 10, 7, 0, 11, 7, 0, 12, 7, 0, 13, 7, 0, 14, 7, 0, 15, 7, 0, 16, 7, 0, 17, 7, 0, 18, 7, 0, 19, 1, 0, 65536, 4, 0, 65537, 53, 0, 65538, 41, 0, 65539, 38, 0, 65540, 8, 0, 65541, 45, 0, 65542, 54, 0, 65543, 52, 0, 65544, 41, 0, 65545, 42, 0, 65546, 47, 0, 65547, 40, 0, 65548, 8, 0, 65549, 39, 0, 65550, 42, 0, 65551, 38, 0, 65552, 45, 0, 65553, 37, 0, 65554, 52, 0, 65555, 5, 0, 131072, 2, 0, 131073, 6, 0, 131074, 6, 0, 131075, 6, 0, 131076, 6, 0, 131077, 6, 0, 131078, 6, 0, 131079, 6, 0, 131080, 6, 0, 131081, 6, 0, 131082, 6, 0, 131083, 6, 0, 131084, 6, 0, 131085, 6, 0, 131086, 6, 0, 131087, 6, 0, 131088, 6, 0, 131089, 6, 0, 131090, 6, 0, 131091, 3, 0, 196608, 62, 0, 196609, 69, 0, 196610, 69, 0, 196611, 69, 0, 196612, 66, 0, 262144, 64, 0, 262145, 89, 0, 262146, 80, 0, 262147, 89, 0, 262148, 68, 0, 327680, 63, 0, 327681, 65, 0, 327682, 65, 0, 327683, 65, 0, 327684, 67, 0 )

[node name="PortalBack" parent="." instance=ExtResource( 3 )]
position = Vector2( 23.7084, 480.001 )
[connection signal="body_entered" from="PortalBack" to="." method="_on_portalBack_body_entered"]
[connection signal="body_exited" from="PortalBack" to="." method="_on_portalBack_body_exited"]
